<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string 
        name="app_name">PersonalBudgeting</string>
    <string 
        name="menu_settings">BUDGET SETTINGS</string>
    <string 
        name="menu_fixedexpenses">FIXED EXPENSES</string>
    <string 
        name="menu_variableexpenses">VARIABLE EXPENSES</string>
    <string 
        name="menu_reports">SUMMARY</string>
    <string
        name="splash">Splash Screen</string>
    <string
        name="help">Help Screen</string>
    <string
        name="app_logo_top">BUDGET BUCKET</string>
    <string
        name="app_logo_bottom">Your Personal Budgeting Application</string>
    <string
        name="app_version_info">Version 1.0.0\nCopyright © 2013 Fateh Software Solutions, Inc. All Rights Reserved.</string>
    <string
        name="menu_item_main">MAIN MENU</string>
    <string
        name="settings">Settings</string>
     <string
        name="settings_firstname">FirstName:</string>
     <string
        name="settings_lastname">LastName:</string>
    <string
        name="settings_nickname">Nickname:</string>
    <string
        name="settings_email">Email:</string>
    <string
        name="settings_dob">Birth Date:</string>
    <string
        name="settings_dob_not_set">No Date Set</string>
    <string
        name="settings_button_dob">Pick Date</string>
    <string
        name="settings_button_pwd">Set Password</string>
    <string
        name="budget_button_actual">ACTUAL</string>    
    <string
        name="settings_gender">Gender:</string>
    <string
        name="settings_password">Password:</string>
    <string
        name="settings_confirmpassword">Confirm Password:</string>
    <string
        name="settings_pwd_set">Password Set</string>
    <string
        name="settings_pwd_not_set">No Password Set</string>
    <string
        name="settings_pwd_not_equal">Passwords do not match, please try again. </string>
    <string
        name="settings_pwd_equal">Passwords match.</string>
    <string 
        name="settings_Grocery">GROCERY</string>
    <string 
        name="settings_Shoping">SHOPING</string>
    <string 
        name="settings_Dining">DINING OUT</string>
    <string 
        name="settings_Travel">TRAVEL</string>
    <string 
        name="settings_Utils">UTILITIES</string>
    <string 
        name="settings_Med">MEDICAL</string>    
    <string
        name="exit">Exit</string>
    <string 
        name="btn_Register">Register Me !</string>
    <string 
        name="btn_categories">CATEGORIES</string>
    <string 
        name="btn_AddAnother">ADD MORE</string>
    <string 
        name="categoryName">NAME</string>
    <string 
        name="amount">AMOUNT</string>
    <string 
        name="settings_button_shopping_date">Shopping Date</string>
    <string 
        name="save">SAVE</string>
    <string 
        name="clear">CLEAR</string>
    <string 
        name="addAnother">Add Another</string>
    <string
        name="repeat">FREQUENCY</string>
    <string 
        name="yes">YES</string>
    <string 
        name="no">NO</string>
    <string 
        name="income">INCOME</string>
    <string 
        name="balance">LEFT $</string>
    <string 
        name="monthlyincome">MONTHLY INCOME</string>
    <string 
        name="savings">SAVING AMOUNT</string>
    <string 
        name="monthlysave">SAVINGS</string>    
    <string 
        name="otherincome">OTHER INCOME</string>    
    <string 
        name="variable">VARIABLE EXPENSES</string>
    <string 
        name="fixed">FIXED EXPENSES</string>  
      <string 
        name="fixedexpense">EXPENSES</string> 
        
    <string 
        name="savedb">SAVE</string>          

    <string
        name="currency">$</string>
    <!-- Define Variables Categories Here -->
    
    <string name="grocery">GROCERY</string>
    <string name="utilities">UTILITIES</string>
    <string name="travel">TRAVEL</string>
    <string name="shoping">SHOPING</string>
    <string name="diningout">DINING OUT</string>
    <string name="medical">PHARMACY</string>
    <string name="gas">GAS</string>
    <string name="misc">OTHERS</string>
    <!-- Define Fixed Category List -->
    <string name="mortgage">RENT/MORTGAGE</string>
    <string name="rentalinsurance">RENTAL INSURANCE</string>
    <string name="healthinsurance">HEALTH INSURANCE</string>
    <string name="lifeinsurance">LIFE INSURANCE</string>
    <string name="carloan">CAR LOAN</string>
    <string name="carinsurance">CAR INSURANCE</string>
    <string name="daycare">DAY CARE</string>
    <string name="fixedmisc">OTHERS</string>
    <string name="expenses">EXPENSE REPORT</string>
    
    <!-- Define Report Headers -->
    <string name="reportdate">DATE</string>
    <string name="reportcategory">CATEGORY</string>
    <string name="reportamt">AMOUNT</string>
    
    <!-- Repeat List -->
    <string name="once">ONCE</string>
    <string name="monthly">MONTHLY</string>
    
    <string 
        name="settings_frequency">SET FREQUENCY</string>
    <string name="currentdate">CurrentDate</string>
</resources>