<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/backgroud">

    <LinearLayout
        android:id="@+id/variableexpensesdialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButtonpPrevMonth"
                android:layout_width="50dp"
                android:layout_height="36dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/roundcorners"
                android:cropToPadding="true"
                android:src="@drawable/previous" />

            <TextView
                android:id="@+id/textViewCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentdate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/ImageButtonNextMonth"
                android:layout_width="50dp"
                android:layout_height="36dp"
                android:background="@drawable/roundcorners"
                android:cropToPadding="true"
                android:src="@drawable/right" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider2" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" 
                android:textColor="@color/Blue" />

            <ProgressBar
                android:id="@+id/progressBarIncome"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="12dp"
                android:layout_marginLeft="65dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/incomeprogressbar" />

            <TextView
                android:id="@+id/textViewActualIncome"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectanglebox"
                android:text="@string/currency"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewIncomeProgress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/balance"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Green" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variable"
                android:textColor="@color/Blue"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarVariableExpenses"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="12dp"
                android:layout_marginLeft="6dp"
                android:progressDrawable="@drawable/incomeprogressbar" />

            <TextView
                android:id="@+id/textViewActualVariableExpense"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectanglebox"
                android:text="@string/currency"
                android:textColor="@color/Black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewVariableExpProgress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/balance"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Green"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_categories"
                android:textColor="@color/Blue"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/Spinner_CategoryList"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView_StoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:text="@string/categoryName"
                android:textColor="@color/Blue"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"  />

            <EditText
                android:id="@+id/EditText_StoreName"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="57dp"
                android:background="@drawable/rectanglebox"
                android:ems="10"
                android:gravity="left"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/Black" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/TextView_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="@color/Blue"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"  />

            <EditText
                android:id="@+id/EditText_Amount"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/rectanglebox"
                android:ems="10"
                android:gravity="left"
                android:inputType="numberDecimal"
                android:textColor="@color/Black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton_ShoppingDate"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:background="@drawable/roundcorners"
                android:cropToPadding="true"
                android:src="@drawable/calendar"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/TextView_ShoppingDate"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:minWidth="50dp"
                android:text="@string/save"
                android:textColor="@color/Blue" />

            <Button
                android:id="@+id/Button_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/clear"
                android:textColor="@color/Blue" />

            <Button
                android:id="@+id/Button_AddAnother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/btn_AddAnother"
                android:textColor="@color/Blue" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>